JWT token based authorization

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -11,7 +11,7 @@
     "NZWalksAuthConnectionString": "Server=IN3421374W1;Database=NZAuthWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "Secretkey",
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
     "Issuer": "https://localhost:7181",
     "Audience": "https://localhost:7181"
   }
